# d

./: .env  Cargo.toml
src/: error.rs  main.rs
src/crypt/: error.rs  mod.rs
src/ctx/: mod.rs
src/db/dev/: reset.sql  seed.sql
src/model/: category.rs  common.rs  enums.rs  error.rs  inventory_log.rs  inventory_transaction.rs  inventory_transaction_old.rs  mod.rs  organization.rs  pageable.rs  permissions.rs  products.rs  user.rs
src/model/store/: mod.rs
src/web/: error.rs  mod.rs  page_test.rs  routes_auth.rs  routes_inventory_deposit.rs  routes_test.rs
src/web/pages/: categories.rs  inventory_transactions.rs  mod.rs  products.rs  toasts.rs
templates/: base.html  base_superuser.html  hello.html  superuser_admin_page.html
templates/categories/: pages_categories.html
templates/categories/fragments/: delete_row_action.html  edit_row.html  table_entries.html  table_entry.html
templates/fragments/: superuser_admin_organization_list.html
templates/inventories/transactions/deposits/: pages_deposits.html
templates/inventories/transactions/deposits/fragments/: table_entry.html
templates/products/: pages_products.html
templates/products/fragments/: delete_row_action.html  editable_row.html  table_entries.html  table_entry.html
templates/toasts/: failure.html  success.html  toast-container.html
