[package]
name = "distrupify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.2", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros", "migrate", "bigdecimal", "chrono"] }
tokio = { version = "1.32.0", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
chrono = { version = "0.4.31", features = ["serde"] }
axum = "0.6.20"
askama = "0.12.1"
validator = { version = "0.16.1", features = ["derive"] }
axum-valid = "0.10.0"
bcrypt = "0.15.0"
tower-cookies = "0.9.0"
